--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@
 
 h3 {
   font-family: Arial, Helvetica, sans-serif;
+  margin-top: 15px;
 }
 
 #categories-container {
@@ -15,15 +16,13 @@ h3 {
 .category-box {
   width: 30%;
   text-align: center;
-  
-  margin: 25px 0px;
-  
+  margin-top: 0px;
 }
 
 .category-box h3 {
   border: 1px solid black;
   border-radius: 25px;
-  box-shadow: #222 3px 1px 10px;
+  box-shadow: #777 3px 3px 4px 0px;
   padding: 15px 0px;
 }
 
@@ -40,6 +39,7 @@ h3 {
 }
 
 .submit, .stores {
+  cursor: pointer;
   background-color: white;
   padding: 8px 15px;
   border: 1px solid black;
@@ -47,7 +47,77 @@ h3 {
   box-shadow: #999 0px 1px 1px;
 }
 
-
 .submit-box {
   padding-right: 30px;
+}
+
+/* Collapsible */
+
+.collapsible {
+  background-color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: white;
+}
+
+/* Checkbox */
+
+input[type=checkbox] {
+  visibility: hidden;
+}
+
+.box-span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 40px;
+  margin-bottom: 10px;
+  font-size: 1rem;
+}
+
+.checkbox-container input:checked ~ .box-span {
+  background-color: black;
+}
+
+.box-span:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkbox-container input:checked ~ .box-span:after {
+  display: block;
+}
+
+.checkbox-container .box-span:after {
+  left: 4px;
+  bottom: 2px;
+  width: 3px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
